--- a/docs/docs/cmd/pp/solution/solution-publisher-get.mdx
+++ b/docs/docs/cmd/pp/solution/solution-publisher-get.mdx
@@ -32,25 +32,25 @@ m365 pp solution publisher get [options]
 
 ## Examples
 
-Gets a specific publisher in a specific environment based on name
+Gets a specific publisher in a specific environment based on name.
 
 ```sh
 m365 pp solution publisher get --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --name "MicrosoftCorporation"
 ```
 
-Gets a specific publisher in a specific environment based on name as Admin
+Gets a specific publisher in a specific environment based on name as Admin.
 
 ```sh
 m365 pp solution publisher get --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --name "MicrosoftCorporation" --asAdmin
 ```
 
-Gets a specific publisher in a specific environment based on id
+Gets a specific publisher in a specific environment based on id.
 
 ```sh
 m365 pp solution publisher get --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --id "ee62fd63-e49e-4c09-80de-8fae1b9a427e"
 ```
 
-Gets a specific publisher in a specific environment based on id as Admin
+Gets a specific publisher in a specific environment based on id as Admin.
 
 ```sh
 m365 pp solution publisher get --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --id "ee62fd63-e49e-4c09-80de-8fae1b9a427e" --asAdmin
@@ -78,9 +78,14 @@ m365 pp solution publisher get --environmentName "Default-2ca3eaa5-140f-4175-826
   <TabItem value="Text">
 
   ```text
-  friendlyname: MicrosoftCorporation
-  publisherid : d21aab70-79e7-11dd-8874-00188b01e34f
-  uniquename  : MicrosoftCorporation
+  customizationoptionvalueprefix: 0
+  customizationprefix           : 
+  description                   : Publisher of Microsoft solutions
+  friendlyname                  : MicrosoftCorporation
+  isreadonly                    : false
+  publisherid                   : d21aab70-79e7-11dd-8874-00188b01e34f
+  uniquename                    : MicrosoftCorporation
+  versionnumber                 : 1226559
   ```
 
   </TabItem>
