--- a/docs/docs/cmd/todo/list/list-get.mdx
+++ b/docs/docs/cmd/todo/list/list-get.mdx
@@ -26,13 +26,13 @@ m365 todo list get [options]
 
 ## Examples
 
-Get a specific Microsoft To Do task list based on id
+Get a specific Microsoft To Do task list based on id.
 
 ```sh
 m365 todo list get --id "AAMkADY3NmM5ZjhiLTc3M2ItNDg5ZC1iNGRiLTAyM2FmMjVjZmUzOQAuAAAAAAAZ1T9YqZrvS66KkevskFAXAQBEMhhN5VK7RaaKpIc1KhMKAAAZ3e1AAAA="
 ```
 
-Get a specific Microsoft To Do task list based on name
+Get a specific Microsoft To Do task list based on name.
 
 ```sh
 m365 todo list get --name "Task list"
@@ -57,8 +57,11 @@ m365 todo list get --name "Task list"
   <TabItem value="Text">
 
   ```text
-  displayName    : Task list
-  id             : AAMkADY3NmM5ZjhiLTc3M2ItNDg5ZC1iNGRiLTAyM2FmMjVjZmUzOQAuAAAAAAAZ1T9YqZrvS66KkevskFAXAQBEMhhN5VK7RaaKpIc1KhMKAAAZ3e1AAAA=
+  displayName      : Task list
+  id               : AAMkADY3NmM5ZjhiLTc3M2ItNDg5ZC1iNGRiLTAyM2FmMjVjZmUzOQAuAAAAAAAZ1T9YqZrvS66KkevskFAXAQBEMhhN5VK7RaaKpIc1KhMKAAAZ3e1AAAA=
+  isOwner          : true
+  isShared         : false
+  wellknownListName: defaultList
   ```
 
   </TabItem>
