--- a/docs/docs/cmd/todo/task/task-get.mdx
+++ b/docs/docs/cmd/todo/task/task-get.mdx
@@ -29,13 +29,13 @@ m365 todo task get [options]
 
 ## Examples
 
-Gets a specific task from a Microsoft To Do tasks list based on the name of the list and the task id
+Gets a specific task from a Microsoft To Do tasks list based on the name of the list and the task id.
 
 ```sh
 m365 todo task get --listName "My task list" --id "AAMkAGYzNjMxYTU4LTJjZjYtNDlhMi1iMzQ2LWVmMTU3YmUzOGM5MABGAAAAAAAw3-tXgryDSr5p162KnUPKBwDEwEFouXWWT50CfwqSN9cpAAEX8ECDAADEwEFouXWWT50CfwqSN9cpAAEX8GuPAAA="
 ```
 
-Gets a specific task from a Microsoft To Do tasks list based on the id of the list and the task id
+Gets a specific task from a Microsoft To Do tasks list based on the id of the list and the task id.
 
 ```sh
 m365 todo task get --listId "AQMkAGYzNjMxYTU4LTJjZjYtNDlhMi1iMzQ2LWVmMTU3YmUzOGM5MAAuAAADMN-7V4K8g0q_adetip1DygEAxMBBaLl1lk_dAn8KkjfXKQABF-BAgwAAAA==" --id "AAMkAGYzNjMxYTU4LTJjZjYtNDlhMi1iMzQ2LWVmMTU3YmUzOGM5MABGAAAAAAAw3-tXgryDSr5p162KnUPKBwDEwEFouXWWT50CfwqSN9cpAAEX8ECDAADEwEFouXWWT50CfwqSN9cpAAEX8GuPAAA="
@@ -68,8 +68,13 @@ m365 todo task get --listId "AQMkAGYzNjMxYTU4LTJjZjYtNDlhMi1iMzQ2LWVmMTU3YmUzOGM
   <TabItem value="Text">
 
   ```text
+  body                : {"content":"","contentType":"text"}
+  categories          : []
   createdDateTime     : 2022-10-23T14:05:09.2673009Z
+  hasAttachments      : false
   id                  : AAMkAGYzNjMxYTU4LTJjZjYtNDlhMi1iMzQ2LWVmMTU3YmUzOGM5MABGAAAAAAAw3-tXgryDSr5p162KnUPKBwDEwEFouXWWT50CfwqSN9cpAAEX8ECDAADEwEFouXWWT50CfwqSN9cpAAEX8GuPAAA=
+  importance          : normal
+  isReminderOn        : false
   lastModifiedDateTime: 2022-10-23T14:15:11.3180312Z
   status              : notStarted
   title               : Stay healthy
