--- a/docs/docs/cmd/viva/engage/engage-message-add.mdx
+++ b/docs/docs/cmd/viva/engage/engage-message-add.mdx
@@ -16,19 +16,19 @@ m365 viva engage message add [options]
 
 ```md definition-list
 `-b, --body <body>`
-: The text of the message body
+: The text of the message body.
 
 `--groupId [groupId]`
-: Post the message to this group, specified by ID. If this is set then the networkId is inferred from it. You must either specify `groupId`, `repliedToId`, or `directToUserIds` to send the message
+: Post the message to this group, specified by ID. If this is set then the networkId is inferred from it. You must either specify `groupId`, `repliedToId`, or `directToUserIds` to send the message.
 
 `-r, --repliedToId [repliedToId]`
-: The message ID this message is in reply to. If this is set then groupId and networkId are inferred from it. You must either specify `groupId`, `repliedToId`, or `directToUserIds` to send the message
+: The message ID this message is in reply to. If this is set then groupId and networkId are inferred from it. You must either specify `groupId`, `repliedToId`, or `directToUserIds` to send the message.
 
 `-d, --directToUserIds [directToUserIds]`
-: Send a private message to one or more users, specified by ID. Alternatively, you can use the Viva Engage network e-mail addresses instead of the IDs. You must either specify `groupId`, `repliedToId`, or `directToUserIds` to send the message
+: Send a private message to one or more users, specified by ID. Alternatively, you can use the Viva Engage network e-mail addresses instead of the IDs. You must either specify `groupId`, `repliedToId`, or `directToUserIds` to send the message.
 
 `--networkId [networkId]`
-: Specify the network to post a message
+: Specify the network to post a message.
 ```
 
 <Global />
@@ -43,37 +43,37 @@ In order to use this command, you need to grant the Microsoft Entra application 
 
 ## Examples
 
-Replies to a message with the ID 1231231231
+Replies to a message with the ID 1231231231.
 
 ```sh
 m365 viva engage message add --body "Hello everyone!" --repliedToId 1231231231
 ```
 
-Sends a private conversation to the user with the ID 1231231231
+Sends a private conversation to the user with the ID 1231231231.
 
 ```sh
 m365 viva engage message add --body "Hello everyone!" --directToUserIds 1231231231
 ```
 
-Sends a private conversation to multiple users by ID
+Sends a private conversation to multiple users by ID.
 
 ```sh
 m365 viva engage message add --body "Hello everyone!" --directToUserIds "1231231231,1121312"
 ```
 
-Sends a private conversation to the user with several e-mail addresses
+Sends a private conversation to the user with several e-mail addresses.
 
 ```sh
 m365 viva engage message add --body "Hello everyone!" --directToUserIds "pl@nubo.eu,sc@nubo.eu"
 ```
 
-Posts a message to the group with the ID 12312312312
+Posts a message to the group with the ID 12312312312.
 
 ```sh
 m365 viva engage message add --body "Hello everyone!" --groupId 12312312312
 ```
 
-Posts a message to the group with the ID 12312312312 in the network 11112312
+Posts a message to the group with the ID 12312312312 in the network 11112312.
 
 ```sh
 m365 viva engage message add --body "Hello everyone!" --groupId 12312312312 --networkId 11112312
@@ -126,7 +126,32 @@ m365 viva engage message add --body "Hello everyone!" --groupId 12312312312 --ne
   <TabItem value="Text">
 
   ```text
-  id: 2000337648877569
+  attachments         : []
+  body                : {"parsed":"Hello everyone!","plain":"Hello everyone!","rich":"Hello everyone!"}
+  chat_client_sequence: null
+  client_type         : O365 Api Auth
+  client_url          : https://api.yammer.com
+  content_excerpt     : Hello everyone!
+  created_at          : 2022/11/11 20:59:56 +0000
+  delegate_id         : null
+  direct_message      : false
+  group_created_id    : 31158067201
+  group_id            : 31158067201
+  id                  : 2000337346863105
+  language            : null
+  liked_by            : {"count":0,"names":[]}
+  message_type        : update
+  network_id          : 5897756673
+  notified_user_ids   : []
+  privacy             : public
+  replied_to_id       : null
+  sender_id           : 36425097217
+  sender_type         : user
+  supplemental_reply  : false
+  system_message      : false
+  thread_id           : 2000337346863105
+  url                 : https://www.yammer.com/api/v1/messages/2000337346863105
+  web_url             : https://www.yammer.com/contoso.onmicrosoft.com/messages/2000337346863105
   ```
 
   </TabItem>
