Removes defaultProperties method from various commands. Closes #6432

--- a/docs/docs/cmd/spo/sitedesign/sitedesign-run-status-get.mdx
+++ b/docs/docs/cmd/spo/sitedesign/sitedesign-run-status-get.mdx
@@ -62,8 +62,15 @@ m365 spo sitedesign run status get --webUrl https://contoso.sharepoint.com/sites
   <TabItem value="Text">
 
   ```text
+  ActionIndex    : 0
+  ActionKey      : 00000000-0000-0000-0000-000000000000
   ActionTitle    : Activate feature f151bb39-7c3b-414f-bb36-6bf18872052f
+  LastModified   : 1687422166000
+  OrdinalIndex   : 0
+  OutcomeCode    : 0
   OutcomeText    : null
+  SiteScriptID   : 0c88bed7-943b-42aa-8fef-8fb69eebe3fe
+  SiteScriptIndex: 0
   SiteScriptTitle: Contoso
   ```
 
