Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -11,10 +11,16 @@ sidebar_position: 4
 **Entra ID:**
 
 - [entra pim role assignment remove](../cmd/entra/pim/pim-role-assignment-remove.mdx) - requests deactivation of an Entra role assignment for a user or group [#5841](https://github.com/pnp/cli-microsoft365/issues/5841)
+- [entra roledefinition add](../cmd/entra/roledefinition/roledefinition-add.mdx) - creates a custom Microsoft Entra ID role definition [#6466](https://github.com/pnp/cli-microsoft365/issues/6466)
+- [entra roledefinition set](../cmd/entra/roledefinition/roledefinition-set.mdx) - updates a custom Microsoft Entra ID role definition [#6467](https://github.com/pnp/cli-microsoft365/issues/6467)
 
 **Exchange Online:**
 
 - [exo approleassignment add](../cmd/exo/approleassignment/approleassignment-add) - grants permissions to an application that's accessing data in Exchange Online and specify which mailboxes an app can access. [#5988](https://github.com/pnp/cli-microsoft365/issues/5988)
+
+**Outlook:**
+
+- [outlook mailbox settings set](../cmd/outlook/mailbox/mailbox-settings-set.mdx) - updates user mailbox settings [#6208](https://github.com/pnp/cli-microsoft365/issues/6208)
 
 **Power Platform:**
 
@@ -23,6 +29,10 @@ sidebar_position: 4
 **SharePoint:**
 
 - [spo list defaultvalue list](../cmd/spo/list/list-defaultvalue-list.mdx) - retrieves default column values for a specific document library [#6404](https://github.com/pnp/cli-microsoft365/issues/6404)
+
+**Tenant:**
+
+- [tenant people pronouns set](../cmd/tenant/people/people-pronouns-set.mdx) - manage pronouns settings for an organization [#6205](https://github.com/pnp/cli-microsoft365/issues/6205)
 
 ### Changes
 
