New command: entra rolepermission list

--- a/docs/docs/cmd/entra/roledefinition/roledefinition-add.mdx
+++ b/docs/docs/cmd/entra/roledefinition/roledefinition-add.mdx
@@ -33,6 +33,10 @@ m365 entra roledefinition add [options]
 
 <Global />
 
+## Remarks
+
+Use the `m365 entra rolepermission list --resourceNamespace microsoft.directory` command to get a list of available resource actions.
+
 ## Examples
 
 Create a custom Microsoft Entra ID role
