--- a/docs/docs/cmd/entra/roledefinition/roledefinition-set.mdx
+++ b/docs/docs/cmd/entra/roledefinition/roledefinition-set.mdx
@@ -37,6 +37,10 @@ m365 entra roledefinition set [options]
 
 <Global />
 
+## Remarks
+
+Use the `m365 entra rolepermission list --resourceNamespace microsoft.directory` command to get a list of available resource actions.
+
 ## Examples
 
 Update a custom Microsoft Entra ID role specified by the id
