--- a/docs/docs/cmd/spo/page/page-clientsidewebpart-add.mdx
+++ b/docs/docs/cmd/spo/page/page-clientsidewebpart-add.mdx
@@ -32,13 +32,16 @@ m365 spo page clientsidewebpart add [options]
 : JSON string with web part data as retrieved from the web part maintenance mode. Specify either `webPartProperties` or `webPartData` but not both.
 
 `--section [section]`
-: Number of the section to which the web part should be added (1 or higher).
+: Number of the section to which the web part should be added (1 or higher). Specify `section` or `verticalSection` but not both.
 
 `--column [column]`
-: Number of the column in which the web part should be added (1 or higher).
+: Number of the column in which the web part should be added (1 or higher). Use `column` in combination with `section`, not with `verticalSection`.
 
 `--order [order]`
 : Order of the web part in the column.
+
+`--verticalSection`
+: Specifies that the web part should be added to the vertical section. 
 ```
 
 <Global />
@@ -85,6 +88,12 @@ Add the standard Image web part with the preconfigured image
 
 ```sh
 m365 spo page clientsidewebpart add --webUrl https://contoso.sharepoint.com/sites/a-team --pageName page.aspx --standardWebPart Image --webPartData '{ "dataVersion": "1.8", "serverProcessedContent": {"htmlStrings":{},"searchablePlainTexts":{"captionText":""},"imageSources":{"imageSource":"/sites/team-a/SiteAssets/work-life-balance.png"},"links":{}}, "properties": {"imageSourceType":2,"altText":"a group of people on a beach","overlayText":"Work life balance","fileName":"48146-OFF12_Justice_01.png","siteId":"27664b85-067d-4be9-a7d7-89b2e804d09f","webId":"a7664b85-067d-4be9-a7d7-89b2e804d09f","listId":"37664b85-067d-4be9-a7d7-89b2e804d09f","uniqueId":"67664b85-067d-4be9-a7d7-89b2e804d09f","imgWidth":650,"imgHeight":433,"fixAspectRatio":false,"isOverlayTextEnabled":true}}'
+```
+
+Add the standard Bing Map web part to a modern page in the vertical section
+
+```sh
+m365 spo page clientsidewebpart add --webUrl https://contoso.sharepoint.com/sites/a-team --pageName page.aspx --standardWebPart BingMap --verticalSection
 ```
 
 ## Response
