--- a/docs/docs/cmd/spo/list/list-defaultvalue-set.mdx
+++ b/docs/docs/cmd/spo/list/list-defaultvalue-set.mdx
@@ -32,7 +32,7 @@ m365 spo list defaultvalue set [options]
 : Default value of the field.
 
 `--folderUrl [folderUrl]`
-: Set the value to a specific folder. By default, the root folder of the list is used.
+: Set the value for a specific folder by specifying a server- or site-relative URL. By default, the root folder of the list is used.
 ```
 
 <Global />
