--- a/docs/docs/cmd/spo/list/list-defaultvalue-clear.mdx
+++ b/docs/docs/cmd/spo/list/list-defaultvalue-clear.mdx
@@ -29,7 +29,7 @@ m365 spo list defaultvalue clear [options]
 : Internal name of the field to clear over the entire list. Specify either `fieldName` or `folderUrl`, but not both.
 
 `--folderUrl [folderUrl]`
-: Clear all fields of a specific folder. Specify either `fieldName` or `folderUrl`, but not both.
+: Clear all fields of a specific folder by specifying a server- or site-relative URL. Specify either `fieldName` or `folderUrl`, but not both.
 
 `-f, --force`
 : Don't prompt for confirmation.
