--- a/docs/docs/cmd/spo/tenant/tenant-homesite-add.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-homesite-add.mdx
@@ -16,7 +16,7 @@ m365 spo tenant homesite add [options]
 
 ```md definition-list
 `-u, --url <url>`
-: URL of the site to set as the home site.
+: URL of the site to use as a home site.
 
 `--isInDraftMode [isInDraftMode]`
 : Specifies whether the home site is in draft mode. Accepts `true` or `false`.
