Fixes bug with redirectUris option not required for platforms. Closes #6565

--- a/docs/docs/cmd/entra/app/app-add.mdx
+++ b/docs/docs/cmd/entra/app/app-add.mdx
@@ -31,7 +31,7 @@ m365 entra appregistration add [options]
 : Comma-separated list of redirect URIs. Requires `platform` to be specified.
 
 `-p, --platform [platform]`
-: Platform for which the `redirectUris` should be configured. Allowed values `spa`, `web`, `publicClient`.
+: Platform for which the `redirectUris` should be configured. Allowed values `spa`, `web`, `publicClient`. Requires `redirectUris` to be specified.
 
 `--implicitFlow`
 : Specify, to indicate that the authorization endpoint should return ID and access tokens.
