Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -28,7 +28,10 @@ sidebar_position: 4
 
 **SharePoint:**
 
+- [spo list defaultvalue clear](../cmd/spo/list/list-defaultvalue-clear.mdx) - clears default column values for a specific document library [#6505](https://github.com/pnp/cli-microsoft365/issues/6505)
 - [spo list defaultvalue list](../cmd/spo/list/list-defaultvalue-list.mdx) - retrieves default column values for a specific document library [#6404](https://github.com/pnp/cli-microsoft365/issues/6404)
+- [spo list defaultvalue remove](../cmd/spo/list/list-defaultvalue-remove.mdx) - removes default column values for a specific document library [#6504](https://github.com/pnp/cli-microsoft365/issues/6504)
+- [spo list defaultvalue set](../cmd/spo/list/list-defaultvalue-set.mdx) - updates default column values for a specific document library [#6503](https://github.com/pnp/cli-microsoft365/issues/6503)
 
 **Tenant:**
 
