--- a/docs/docs/cmd/tenant/report/report-settings-set.mdx
+++ b/docs/docs/cmd/tenant/report/report-settings-set.mdx
@@ -1,6 +1,4 @@
 import Global from '/docs/cmd/_global.mdx';
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
 
 # tenant report settings set
 
@@ -15,7 +13,7 @@ m365 tenant report settings set [options]
 ## Options
 
 ```md definition-list
-`-h, --hideUserInformation <hideUserInformation>`
+`-d, --displayConcealedNames <displayConcealedNames>`
 : Determines whether all reports conceal user information such as usernames, groups, and sites. If false, all reports show identifiable information.
 
 ```
@@ -24,10 +22,10 @@ m365 tenant report settings set [options]
 
 ## Examples
 
-Conceal user information in Microsoft 365 reports
+Set to display concealed user information in Microsoft 365 reports
 
 ```sh
-m365 tenant report settings set --hideUserInformation true
+m365 tenant report settings set --displayConcealedNames true
 ```
 
 ## Response
