Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -13,6 +13,7 @@ sidebar_position: 4
 - [entra pim role assignment remove](../cmd/entra/pim/pim-role-assignment-remove.mdx) - requests deactivation of an Entra role assignment for a user or group [#5841](https://github.com/pnp/cli-microsoft365/issues/5841)
 - [entra roledefinition add](../cmd/entra/roledefinition/roledefinition-add.mdx) - creates a custom Microsoft Entra ID role definition [#6466](https://github.com/pnp/cli-microsoft365/issues/6466)
 - [entra roledefinition set](../cmd/entra/roledefinition/roledefinition-set.mdx) - updates a custom Microsoft Entra ID role definition [#6467](https://github.com/pnp/cli-microsoft365/issues/6467)
+- [entra rolepermission list](../cmd/entra/rolepermission/rolepermission-list.mdx) - retrieves a list of Microsoft Entra ID role permissions [#6562](https://github.com/pnp/cli-microsoft365/issues/6562)
 
 **Exchange Online:**
 
@@ -36,6 +37,7 @@ sidebar_position: 4
 **Tenant:**
 
 - [tenant people pronouns set](../cmd/tenant/people/people-pronouns-set.mdx) - manage pronouns settings for an organization [#6205](https://github.com/pnp/cli-microsoft365/issues/6205)
+- [tenant report settings set](../cmd/tenant/report/report-settings-set.mdx) - manage tenant-level settings for Microsoft 365 reports [#6247](https://github.com/pnp/cli-microsoft365/issues/6247)
 
 ### Changes
 
