Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -34,6 +34,10 @@ sidebar_position: 4
 - [spo list defaultvalue remove](../cmd/spo/list/list-defaultvalue-remove.mdx) - removes default column values for a specific document library [#6504](https://github.com/pnp/cli-microsoft365/issues/6504)
 - [spo list defaultvalue set](../cmd/spo/list/list-defaultvalue-set.mdx) - updates default column values for a specific document library [#6503](https://github.com/pnp/cli-microsoft365/issues/6503)
 
+**SharePoint Embedded:**
+
+- [spe container activate](../cmd/spe/container/container-activate.mdx) - activates a container [#6086](https://github.com/pnp/cli-microsoft365/issues/6086)
+
 **Tenant:**
 
 - [tenant people pronouns set](../cmd/tenant/people/people-pronouns-set.mdx) - manage pronouns settings for an organization [#6205](https://github.com/pnp/cli-microsoft365/issues/6205)
@@ -49,8 +53,9 @@ sidebar_position: 4
 - added Bluesky to docs
 - fixed retrieving distribution groups [#6529](https://github.com/pnp/cli-microsoft365/issues/6529)
 - fixed login validation for system-assigned managed identity [#6527](https://github.com/pnp/cli-microsoft365/issues/6527)
-- fixed 'spo folder roleassignment add' command by removing incorrect breakroleinheritance functionality. Closes [#6555](https://github.com/pnp/cli-microsoft365/issues/6555)
+- fixed 'spo folder roleassignment add' command by removing incorrect breakroleinheritance functionality [#6555](https://github.com/pnp/cli-microsoft365/issues/6555)
 - added new sample script [Remove OAuth2 permission grants in a specific enterprise application (or service principal) in Entra ID](../sample-scripts/entra/entra-remove-oauth2-permission-grants/index.mdx) [#6537](https://github.com/pnp/cli-microsoft365/issues/6537)
+- fixed 'entra app add' command [#6565](https://github.com/pnp/cli-microsoft365/issues/6565)
 
 ## [v10.2.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.2.0)
 
