--- a/docs/docs/cmd/outlook/mailbox/mailbox-settings-get.mdx
+++ b/docs/docs/cmd/outlook/mailbox/mailbox-settings-get.mdx
@@ -26,7 +26,7 @@ m365 outlook mailbox settings get [options]
 
 ## Examples
 
-Get mailbox settings of signed-in user
+Get mailbox settings of the signed-in user
 
 ```sh
 m365 outlook mailbox settings get
