Updates release notes

--- a/docs/docs/cmd/entra/rolepermission/rolepermission-list.mdx
+++ b/docs/docs/cmd/entra/rolepermission/rolepermission-list.mdx
@@ -32,6 +32,8 @@ The command is based on an API that is currently in preview and is subject to ch
 
 :::
 
+Use the `m365 entra resourcenamespace list` command to get a list of available resource namespaces.
+
 ## Examples
 
 Get a list of role permissions
