--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,22 @@ sidebar_position: 4
 
 # Release notes
 
+## v10.4.0 (Beta)
+
+### New commands
+
+**Entra ID:**
+
+- [entra resourcenamespace list](../cmd/entra/resourcenamespace/resourcenamespace-list.mdx) - retrieves a list of Microsoft Entra ID RBAC resource namespaces [#6561](https://github.com/pnp/cli-microsoft365/issues/6561)
+
+**Tenant:**
+
+- [tenant report settings get](../cmd/tenant/report/report-settings-get.mdx) - retrieves tenant-level settings for Microsoft 365 reports [#6246](https://github.com/pnp/cli-microsoft365/issues/6246)
+
+### Changes
+
+- updated 'spo page get' command with --default option to retrieve the default page [#6493](https://github.com/pnp/cli-microsoft365/issues/6493)
+
 ## [v10.3.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.3.0)
 
 ### New commands
