--- a/docs/docs/cmd/entra/group/group-member-add.mdx
+++ b/docs/docs/cmd/entra/group/group-member-add.mdx
@@ -14,10 +14,13 @@ m365 entra group member add [options]
 
 ```md definition-list
 `-i, --groupId [groupId]`
-: The ID of the Microsoft Entra group. Specify `groupId` or `groupDisplayName` but not both.
+: The ID of the Microsoft Entra group. Specify `groupId`, `groupDisplayName` or `groupName` but not multiple.
 
 `-n, --groupDisplayName [groupDisplayName]`
-: The display name of the Microsoft Entra group. Specify `groupId` or `groupDisplayName` but not both.
+: (deprecated. Use option `groupName` instead) The display name of the Microsoft Entra group. Specify `groupId`, `groupDisplayName` or `groupName` but not multiple.
+
+`--groupName [groupName]`
+: The display name of the Microsoft Entra group. Specify `groupId`, `groupDisplayName` or `groupName` but not multiple.
 
 `--ids [ids]`
 : Microsoft Entra IDs of users. You can also pass a comma-separated list of IDs. Specify either `ids` or `userNames` but not both.
@@ -39,6 +42,12 @@ Add a single member specified by ID as a member to a group specified by display 
 m365 entra group member add --groupDisplayName Developers --ids 098b9f52-f48c-4401-819f-29c33794c3f5 --role Member
 ```
 
+Add a single member specified by ID as a member to a group specified by group name.
+
+```sh
+m365 entra group member add --groupName Developers --ids 098b9f52-f48c-4401-819f-29c33794c3f5 --role Member
+```
+
 Add multiple members specified by ID as members to a group specified by ID.
 
 ```sh
@@ -49,6 +58,12 @@ Add a single member specified by UPN as an owner to a group specified by display
 
 ```sh
 m365 entra group member add --groupDisplayName Developers --userNames john.doe@contoso.com --role Owner
+```
+
+Add a single member specified by UPN as an owner to a group specified by group name.
+
+```sh
+m365 entra group member add --groupName Developers --userNames john.doe@contoso.com --role Owner
 ```
 
 Adds multiple members specified by UPN as owners to a group specified by ID.
