Applies code review

--- a/docs/docs/user-guide/automation/azure-function-powershell.mdx
+++ b/docs/docs/user-guide/automation/azure-function-powershell.mdx
@@ -83,7 +83,7 @@ Apart from this IDE, you will need the following extensions for Visual Studio Co
 
 1. Create `package.json` file in the root of the project.
 
-    To use CLI for Microsoft 365 in this Azure Function, we have to install it locally in the project. When everything is ready to go, we will publish CLI for Microsoft 365 with out code to the Azure Function.
+    To use CLI for Microsoft 365 in this Azure Function, we have to install it locally in the project. When everything is ready to go, we will publish CLI for Microsoft 365 with our own code to the Azure Function.
     This will prevent the need to install the CLI for Microsoft 365 on the Azure Function itself at every execution.
     The easiest way to achieve this is to create a `package.json` file in the root of your project (or run `npm init`).
     Make sure your file looks like this (choose your own project name and version):
