Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -12,6 +12,10 @@ sidebar_position: 4
 
 - [entra resourcenamespace list](../cmd/entra/resourcenamespace/resourcenamespace-list.mdx) - retrieves a list of Microsoft Entra ID RBAC resource namespaces [#6561](https://github.com/pnp/cli-microsoft365/issues/6561)
 
+**Outlook:**
+
+- [outlook mailbox settings get](../cmd/outlook/mailbox/mailbox-settings-get.mdx) - retrieves user mailbox settings [#6567](https://github.com/pnp/cli-microsoft365/issues/6567)
+
 **Tenant:**
 
 - [tenant report settings get](../cmd/tenant/report/report-settings-get.mdx) - retrieves tenant-level settings for Microsoft 365 reports [#6246](https://github.com/pnp/cli-microsoft365/issues/6246)
@@ -19,6 +23,7 @@ sidebar_position: 4
 ### Changes
 
 - updated 'spo page get' command with --default option to retrieve the default page [#6493](https://github.com/pnp/cli-microsoft365/issues/6493)
+- added a deprecation warning for spo mail send command [#6576](https://github.com/pnp/cli-microsoft365/issues/6576)
 
 ## [v10.3.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.3.0)
 
