Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -11,6 +11,7 @@ sidebar_position: 4
 **Entra ID:**
 
 - [entra resourcenamespace list](../cmd/entra/resourcenamespace/resourcenamespace-list.mdx) - retrieves a list of Microsoft Entra ID RBAC resource namespaces [#6561](https://github.com/pnp/cli-microsoft365/issues/6561)
+- [entra user session revoke](../cmd/entra/user/user-session-revoke.mdx) - revokes all sign-in sessions for a given user [#6514](https://github.com/pnp/cli-microsoft365/issues/6514)
 
 **Outlook:**
 
@@ -22,8 +23,10 @@ sidebar_position: 4
 
 ### Changes
 
-- updated 'spo page get' command with --default option to retrieve the default page [#6493](https://github.com/pnp/cli-microsoft365/issues/6493)
-- added a deprecation warning for spo mail send command [#6576](https://github.com/pnp/cli-microsoft365/issues/6576)
+- updated [spo page get](../cmd/spo/page/page-get.mdx) command with `--default` option to retrieve the default page [#6493](https://github.com/pnp/cli-microsoft365/issues/6493)
+- added a deprecation warning for [spo mail send](../cmd/spo/mail/mail-send.mdx) command [#6576](https://github.com/pnp/cli-microsoft365/issues/6576)
+- added new [sample script](../sample-scripts/entra/find-obsolete-m365-groups/index.mdx) to get a list of all obsolete M365 groups [#2475](https://github.com/pnp/cli-microsoft365/issues/2475)
+- fixed prompting for a value when an option is missing [#6518](https://github.com/pnp/cli-microsoft365/issues/6518)
 
 ## [v10.3.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.3.0)
 
