--- a/docs/docs/cmd/entra/group/group-member-set.mdx
+++ b/docs/docs/cmd/entra/group/group-member-set.mdx
@@ -14,7 +14,7 @@ m365 entra group member set [options]
 
 ```md definition-list
 `-i, --groupId [groupId]`
-: The ID of the Entra ID group. Specify `groupId`, `groupDisplayName`, or `groupName` but not multiple.
+: The ID of the Entra ID group. Specify `groupId`, `groupDisplayName` or `groupName` but not multiple.
 
 `-n, --groupDisplayName [groupDisplayName]`
 : The display name of the Entra ID group. Specify `groupId`, `groupDisplayName`, or `groupName` but not multiple.
