--- a/docs/docs/cmd/entra/group/group-member-set.mdx
+++ b/docs/docs/cmd/entra/group/group-member-set.mdx
@@ -17,7 +17,7 @@ m365 entra group member set [options]
 : The ID of the Entra ID group. Specify `groupId`, `groupDisplayName` or `groupName` but not multiple.
 
 `-n, --groupDisplayName [groupDisplayName]`
-: The display name of the Entra ID group. Specify `groupId`, `groupDisplayName`, or `groupName` but not multiple.
+: (deprecated. Use option `groupName` instead) The display name of the Entra ID group. Specify `groupId`, `groupDisplayName` or `groupName` but not multiple.
 
 `--groupName [groupName]`
 : The display name of the Microsoft Entra group. Specify `groupId`, `groupDisplayName`, or `groupName` but not multiple.
