--- a/docs/docs/cmd/entra/group/group-member-set.mdx
+++ b/docs/docs/cmd/entra/group/group-member-set.mdx
@@ -20,7 +20,7 @@ m365 entra group member set [options]
 : (deprecated. Use option `groupName` instead) The display name of the Entra ID group. Specify `groupId`, `groupDisplayName` or `groupName` but not multiple.
 
 `--groupName [groupName]`
-: The display name of the Microsoft Entra group. Specify `groupId`, `groupDisplayName`, or `groupName` but not multiple.
+: The display name of the Microsoft Entra group. Specify `groupId`, `groupDisplayName` or `groupName` but not multiple.
 
 `--ids [ids]`
 : Comma-separated list of user IDs. Specify either `ids` or `userNames` but not both.
