Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -30,6 +30,9 @@ sidebar_position: 4
 - updated project & docs dependencies
 - added internalName option for spo field commands [#6249](https://github.com/pnp/cli-microsoft365/issues/6249)
 - added 'groupName' option and deprecated 'groupDisplayName' on 'entra group member' commands [#6546](https://github.com/pnp/cli-microsoft365/issues/6546)
+- fixed spo pages commands [#6462](https://github.com/pnp/cli-microsoft365/issues/6462)
+- fixed m365 setup permissions error [#6592](https://github.com/pnp/cli-microsoft365/issues/6592)
+
 
 ## [v10.3.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.3.0)
 
