Renames 'spo tenant homesite list' command. Closes #6597

--- a/docs/docs/cmd/spo/homesite/homesite-list.mdx
+++ b/docs/docs/cmd/spo/homesite/homesite-list.mdx
@@ -2,11 +2,17 @@ import Global from '/docs/cmd/_global.mdx';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-# spo tenant homesite list
+# spo homesite list
 
 Lists all home sites
 
 ## Usage
+
+```sh
+m365 spo homesite list [options]
+```
+
+## Alias
 
 ```sh
 m365 spo tenant homesite list [options]
@@ -21,7 +27,7 @@ m365 spo tenant homesite list [options]
 List all home sites
 
 ```sh
-m365 spo tenant homesite list
+m365 spo homesite list
 ```
 
 ## Response
@@ -72,7 +78,7 @@ m365 spo tenant homesite list
   <TabItem value="Markdown">
 
   ```md
-  # spo tenant homesite list 
+  # spo homesite list 
 
   Date: 11/18/2024
 
