--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -32,7 +32,7 @@ sidebar_position: 4
 - added 'groupName' option and deprecated 'groupDisplayName' on 'entra group member' commands [#6546](https://github.com/pnp/cli-microsoft365/issues/6546)
 - fixed spo pages commands [#6462](https://github.com/pnp/cli-microsoft365/issues/6462)
 - fixed m365 setup permissions error [#6592](https://github.com/pnp/cli-microsoft365/issues/6592)
-
+- fixed logging telemetry
 
 ## [v10.3.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.3.0)
 
