Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -32,6 +32,12 @@ sidebar_position: 4
 - added 'groupName' option and deprecated 'groupDisplayName' on 'entra group member' commands [#6546](https://github.com/pnp/cli-microsoft365/issues/6546)
 - fixed spo pages commands [#6462](https://github.com/pnp/cli-microsoft365/issues/6462)
 
+## [v10.3.2](https://github.com/pnp/cli-microsoft365/releases/tag/v10.3.2)
+
+### Changes
+
+- reverted logging telemetry fix due to unexpected behavior on Windows machines
+
 ## [v10.3.1](https://github.com/pnp/cli-microsoft365/releases/tag/v10.3.1)
 
 ### Changes
